Added Detail page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Diner Mind</title>
     <link href="css\index.css" rel="stylesheet" />
+    <link href="https://i.ibb.co/VDFzvwV/DM-Icon.jpg" type="images" rel="icon">
 </head>
 
 <body>
