--- a/pages/listing.html
+++ b/pages/listing.html
@@ -3,7 +3,7 @@
 <head>
     <title>listing page</title>
     <link href="../css/listing.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://i.ibb.co/VDFzvwV/DM-Icon.jpg" type="images" rel="icon">
 </head>
 
 <body>
@@ -56,11 +56,11 @@
 
                 <div class="item">
                     <div class="itemImg">
-                        <img src="https://i.ibb.co/smQzbrc/Paradise.webp" alt="Paradise" />
+                        <img src="https://i.ibb.co/1QKH2vj/Paradise-B.png" alt="Paradise-B" />
                     </div>
                     <div class="itemDetails">
                         <div class="itemHeading">
-                            <a href="" target="_blank">Paradise Biryani</a>
+                            <a href="../pages/paradiseBiryani.html" target="_blank">Paradise Biryani</a>
                         </div>
                         <div class="itemSubHead">Door no.10-02-1/17, Chaitanya Nagar,
                             Gajuwaka, Vizag<br>Average Cost<br>Rs. 250 for one</div>
@@ -83,7 +83,7 @@
                         <div class="itemHeading">
                             <a href="" target="_blank">Dreams Cafe</a>
                         </div>
-                        <div class="itemSubHead">2nd FLOOR, Bay Complex, Rk Beach Road, Vizag<br>Average Cost<br>Rs.
+                        <div class="itemSubHead">2nd Floor, Bay Complex, Rk Beach Road, Vizag<br>Average Cost<br>Rs.
                             300 for
                             two</div>
                         <div class="menu1">
@@ -252,7 +252,7 @@
                         <div class="itemHeading">
                             <a href="" target="_blank">Banana Leaf</a>
                         </div>
-                        <div class="itemSubHead">4TH FLOOR, VIP CENTER, VIP Rd, Siripuram, Vizag<br>Average Cost<br>Rs.
+                        <div class="itemSubHead">4TH Floor, VIP CENTER, VIP Rd, Siripuram, Vizag<br>Average Cost<br>Rs.
                             250 for
                             two</div>
                         <div class="menu1">
