--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
             Find Best Place Near You
         </div>
         <div id="dropdown">
-            <select>
-                <option>---SELECT YOUR CITY--</option>
+            <select id="city">
+                <option>--SELECT YOUR CITY--</option>
                 <option>Mumbai</option>
                 <option>Delhi</option>
                 <option>Chennai</option>
                 <option>Hyderabad</option>
+                <option>Vizag</option>
             </select>
             <select id="restaurant">
                 <option>---SELECT YOUR RESTAURANT---</option>
