--- a/pages/BehrouzBiryani.html
+++ b/pages/BehrouzBiryani.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <title>Paradise Biryani</title>
-    <link href="../css/paradiseBiryani.css" rel="stylesheet" />
+    <title>Behrouz Biryani</title>
+    <link href="../css/BehrouzBiryani.css" rel="stylesheet" />
     <link href="https://i.ibb.co/VDFzvwV/DM-Icon.jpg" type="images" rel="icon">
 </head>
 
@@ -28,17 +28,16 @@
         </div>
     </header>
     <div id="content">
-        <div id="restaurantName">Paradise Biryani</div>
-        <div id="restaurantAddress"><i>Door no.10-02-1/17, Chaitanya Nagar,
-                <br>Gajuwaka, Vizag</i>
+        <div id="restaurantName">Behrouz Biryani</div>
+        <div id="restaurantAddress"><i>Poorna Complex, Newtown Road, Vizag</i>
         </div>
 
         <div id="imgDiv">
-            <img src="https://i.ibb.co/1QKH2vj/Paradise-B.png" alt="Paradise-B" />
+            <img src="https://i.ibb.co/Zx65dWr/behrouz-Biryani.jpg" alt="behrouz-Biryani" />
         </div>
         <div id="contentDiv">
-            <h1>Chicken Fry Biryani</h1>
-            <span>198 customers rating is <b>Good</b></span>
+            <h1>Special Chicken Biryani</h1>
+            <span>246 customers rating is <b>Good</b></span>
             <h3>Old Price: Rs.<del>450</del></h3>
             <h3>New Price: Rs.300</h3>
             <h2><i>Best Biryani at your Door step or Dine-In</i></h2>
