--- a/pages/ChaatGali.html
+++ b/pages/ChaatGali.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <title>Paradise Biryani</title>
-    <link href="../css/paradiseBiryani.css" rel="stylesheet" />
+    <title>Chaat Gali @69</title>
+    <link href="../css/keventers.css" rel="stylesheet" />
     <link href="https://i.ibb.co/VDFzvwV/DM-Icon.jpg" type="images" rel="icon">
 </head>
 
@@ -28,32 +28,32 @@
         </div>
     </header>
     <div id="content">
-        <div id="restaurantName">Paradise Biryani</div>
-        <div id="restaurantAddress"><i>Door no.10-02-1/17, Chaitanya Nagar,
-                <br>Gajuwaka, Vizag</i>
+        <div id="restaurantName">Chaat Gali @69</div>
+        <div id="restaurantAddress"><i>Rajarhat road, MVP colony, Vizag</i>
         </div>
 
         <div id="imgDiv">
-            <img src="https://i.ibb.co/1QKH2vj/Paradise-B.png" alt="Paradise-B" />
+            <img src="https://i.ibb.co/q5jHXHw/bhelpuri.jpg" alt="bhelpuri" />
         </div>
         <div id="contentDiv">
-            <h1>Chicken Fry Biryani</h1>
-            <span>198 customers rating is <b>Good</b></span>
-            <h3>Old Price: Rs.<del>450</del></h3>
-            <h3>New Price: Rs.300</h3>
-            <h2><i>Best Biryani at your Door step or Dine-In</i></h2>
+            <h1>Bhelpuri</h1>
+            <span>129 customers rating is <b>Good</b></span>
+            <h3>Old Price: Rs.<del>120</del></h3>
+            <h3>New Price: Rs.80</h3>
+            <h2><i>Snacks & fastfoods at your Door step or Dine-In</i>
+            </h2>
             <div class="featureContainer">
                 <figure>
                     <img class="figIcon" src="https://i.ibb.co/mD3jpgc/sentizied.png" alt="sanitized" />
                     <figcaption>Fully sanitized</figcaption>
                 </figure>
-                <figure id="fig2">
+                <figure>
                     <img class="figIcon" src="https://i.ibb.co/kHrm3Mh/delivery.png" alt="free delivery" />
                     <figcaption>Free Delivery</figcaption>
                 </figure>
-                <figure id="fig3">
-                    <img class="figIcon" src="https://i.ibb.co/KcPrLvB/non-veg.jpg" alt="Non-Veg" />
-                    <figcaption>Non-Vegetarian</figcaption>
+                <figure>
+                    <img class="figIcon" src="https://i.ibb.co/wJvrhYg/veg.png" alt="Pure veg" />
+                    <figcaption>Pure Veg</figcaption>
                 </figure>
             </div>
             <button id="button1">Back</button>
