--- a/pages/listing.html
+++ b/pages/listing.html
@@ -63,7 +63,7 @@
                             <a href="../pages/paradiseBiryani.html" target="_blank">Paradise Biryani</a>
                         </div>
                         <div class="itemSubHead">Door no.10-02-1/17, Chaitanya Nagar,
-                            Gajuwaka, Vizag<br>Average Cost<br>Rs. 250 for one</div>
+                            Gajuwaka, Vizag<br>Average Cost<br><i>Rs. 250 for one</i></div>
                         <div class="menu1">
                             <div class="cuisine1">Chinese</div>
                             <div class="cuisine2">Khebab</div>
@@ -81,18 +81,16 @@
                     </div>
                     <div class="itemDetails">
                         <div class="itemHeading">
-                            <a href="" target="_blank">Dreams Cafe</a>
+                            <a href="../pages/DreamsCafe.html" target="_blank">Dreams Cafe</a>
                         </div>
-                        <div class="itemSubHead">2nd Floor, Bay Complex, Rk Beach Road, Vizag<br>Average Cost<br>Rs.
-                            300 for
-                            two</div>
+                        <div class="itemSubHead">2nd Floor, Bay Complex, Rk Beach Road, Vizag<br>Average Cost<br><i>Rs.
+                                300 for two</i></div>
                         <div class="menu1">
                             <div class="cuisine1">Fastfoods</div>
                             <div class="cuisine2">Beverages</div>
                         </div>
                         <div class="menu2">
                             <div class="cuisine3">Snacks</div>
-                            <!--<div class="cuisine4">Beverages</div> -->
                         </div>
                     </div>
                 </div>
@@ -103,11 +101,10 @@
                     </div>
                     <div class="itemDetails">
                         <div class="itemHeading">
-                            <a href="" target="_blank">Sri Bhagya Grand</a>
+                            <a href="../pages/SriBhagyaGrand.html" target="_blank">Sri Bhagya Grand</a>
                         </div>
-                        <div class="itemSubHead">Vijayabank layout, Bommanahalli, Vizag<br>Average Cost<br>Rs. 150
-                            for
-                            two</div>
+                        <div class="itemSubHead">Vijayabank layout, Bommanahalli, Vizag<br>Average Cost<br><i>Rs.150 for
+                                two</i> </div>
                         <div class="menu1">
                             <div class="cuisine1">Beverages</div>
                             <div class="cuisine2">North Indian</div>
@@ -125,10 +122,10 @@
                     </div>
                     <div class="itemDetails">
                         <div class="itemHeading">
-                            <a href="" target="_blank">Keventers Ice Cream</a>
+                            <a href="../pages/keventers.html" target="_blank">Keventers Ice Cream</a>
                         </div>
-                        <div class="itemSubHead">Axis Mall, Newtown, Newtown, Vizag<br>Average Cost<br>Rs. 100 for
-                            two</div>
+                        <div class="itemSubHead">Axis Mall, Newtown, Newtown, Vizag<br>Average Cost<br><i>Rs. 100 for
+                                two</i></div>
                         <div class="menu1">
                             <div class="cuisine1">Ice creams</div>
                             <div class="cuisine2">Shakes</div>
@@ -146,9 +143,10 @@
                     </div>
                     <div class="itemDetails">
                         <div class="itemHeading">
-                            <a href="" target="_blank">Sri Udupi Food Hub</a>
+                            <a href="../pages/SriUdupi.html" target="_blank">Sri Udupi Food Hub</a>
                         </div>
-                        <div class="itemSubHead">Indiranagar, Domlur, Vizag<br>Average Cost<br>Rs. 199 for two</div>
+                        <div class="itemSubHead">Indiranagar, Domlur, Vizag<br>Average Cost<br><i>Rs. 199 for two</i>
+                        </div>
                         <div class="menu1">
                             <div class="cuisine1">South Indian</div>
                             <div class="cuisine2">Breakfast</div>
@@ -166,10 +164,11 @@
                     </div>
                     <div class="itemDetails">
                         <div class="itemHeading">
-                            <a href="" target="_blank">Noodles Shoodlez</a>
+                            <a href="../pages/NoodlesShoodlez.html" target="_blank">Noodles Shoodlez</a>
                         </div>
-                        <div class="itemSubHead">Opposite Unitech Gate 1, Newtown, Vizag<br>Average Cost<br>Rs. 300 for
-                            two</div>
+                        <div class="itemSubHead">Opposite Unitech Gate 1, Newtown, Vizag<br>Average Cost<br><i>Rs. 300
+                                for
+                                two</i></div>
                         <div class="menu1">
                             <div class="cuisine1">Chinese</div>
                             <div class="cuisine2">Fastfoods</div>
@@ -187,10 +186,10 @@
                     </div>
                     <div class="itemDetails">
                         <div class="itemHeading">
-                            <a href="" target="_blank">Chaat Gali @69</a>
+                            <a href="../pages/ChaatGali.html" target="_blank">Chaat Gali @69</a>
                         </div>
-                        <div class="itemSubHead">Rajarhat road, MVP colony, Vizag<br>Average Cost<br>Rs. 100 for
-                            two</div>
+                        <div class="itemSubHead">Rajarhat road, MVP colony, Vizag<br>Average Cost<br><i>Rs. 100 for
+                                two</i></div>
                         <div class="menu1">
                             <div class="cuisine1">Chinese</div>
                             <div class="cuisine2">Pastas</div>
@@ -208,10 +207,10 @@
                     </div>
                     <div class="itemDetails">
                         <div class="itemHeading">
-                            <a href="" target="_blank">Behrouz Biryani</a>
+                            <a href="../pages/BehrouzBiryani.html" target="_blank">Behrouz Biryani</a>
                         </div>
-                        <div class="itemSubHead">Poorna market, Newtown , Vizag<br>Average Cost<br>Rs. 500 for
-                            two</div>
+                        <div class="itemSubHead">Poorna Complex, Newtown Road, Vizag<br>Average Cost<br><i>Rs. 500 for
+                                two</i></div>
                         <div class="menu1">
                             <div class="cuisine1">Biryani</div>
                             <div class="cuisine2">Mughali</div>
@@ -229,10 +228,11 @@
                     </div>
                     <div class="itemDetails">
                         <div class="itemHeading">
-                            <a href="" target="_blank">The Waffle House</a>
+                            <a href="../pages/WaffleHouse.html" target="_blank">The Waffle House</a>
                         </div>
-                        <div class="itemSubHead">Opposite Chok Mandir, Bidhannagar, Vizag<br>Average Cost<br>Rs. 200 for
-                            two</div>
+                        <div class="itemSubHead">Opposite Chok Mandir, Bidhannagar, Vizag<br>Average Cost<br><i>Rs.200
+                                for
+                                two</i></div>
                         <div class="menu1">
                             <div class="cuisine1">Ice creams</div>
                             <div class="cuisine2">Shakes</div>
@@ -250,11 +250,11 @@
                     </div>
                     <div class="itemDetails">
                         <div class="itemHeading">
-                            <a href="" target="_blank">Banana Leaf</a>
+                            <a href="../pages/BananaLeaf.html" target="_blank">Banana Leaf</a>
                         </div>
-                        <div class="itemSubHead">4TH Floor, VIP CENTER, VIP Rd, Siripuram, Vizag<br>Average Cost<br>Rs.
-                            250 for
-                            two</div>
+                        <div class="itemSubHead">4TH Floor, VIP CENTER, VIP Rd, Siripuram, Vizag<br>Average
+                            Cost<br><i>Rs.250 for
+                                two</i></div>
                         <div class="menu1">
                             <div class="cuisine1">South Indian</div>
                             <div class="cuisine2">Tiffins</div>
