--- a/pages/DreamsCafe.html
+++ b/pages/DreamsCafe.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <title>Paradise Biryani</title>
-    <link href="../css/paradiseBiryani.css" rel="stylesheet" />
+    <title>Dreams Cafe</title>
+    <link href="../css/DreamsCafe.css" rel="stylesheet" />
     <link href="https://i.ibb.co/VDFzvwV/DM-Icon.jpg" type="images" rel="icon">
 </head>
 
@@ -28,32 +28,34 @@
         </div>
     </header>
     <div id="content">
-        <div id="restaurantName">Paradise Biryani</div>
+        <div id="restaurantName">Dreams Cafe</div>
         <div id="restaurantAddress"><i>Door no.10-02-1/17, Chaitanya Nagar,
                 <br>Gajuwaka, Vizag</i>
         </div>
 
         <div id="imgDiv">
-            <img src="https://i.ibb.co/1QKH2vj/Paradise-B.png" alt="Paradise-B" />
+            <img src="https://i.ibb.co/T11mw6n/Corn-Sandwich.jpg" alt="Corn-Sandwich" />
         </div>
         <div id="contentDiv">
-            <h1>Chicken Fry Biryani</h1>
-            <span>198 customers rating is <b>Good</b></span>
-            <h3>Old Price: Rs.<del>450</del></h3>
-            <h3>New Price: Rs.300</h3>
-            <h2><i>Best Biryani at your Door step or Dine-In</i></h2>
+            <h1>Cheese & Corn Sandwich(1 pc)</h1>
+            <span>350 customers rating is <b>Good</b></span>
+            <h3>Old Price: Rs.<del>150</del></h3>
+            <h3>New Price: Rs.135</h3>
+            <h2><i>Its is made with fresh topped american corn, onion, tomatoes and spread with liquid cheese &
+                    mayonnaise.</i>
+            </h2>
             <div class="featureContainer">
                 <figure>
                     <img class="figIcon" src="https://i.ibb.co/mD3jpgc/sentizied.png" alt="sanitized" />
                     <figcaption>Fully sanitized</figcaption>
                 </figure>
-                <figure id="fig2">
+                <figure>
                     <img class="figIcon" src="https://i.ibb.co/kHrm3Mh/delivery.png" alt="free delivery" />
                     <figcaption>Free Delivery</figcaption>
                 </figure>
-                <figure id="fig3">
-                    <img class="figIcon" src="https://i.ibb.co/KcPrLvB/non-veg.jpg" alt="Non-Veg" />
-                    <figcaption>Non-Vegetarian</figcaption>
+                <figure>
+                    <img class="figIcon" src="https://i.ibb.co/wJvrhYg/veg.png" alt="Corn-Sandwich" />
+                    <figcaption>Pure Veg</figcaption>
                 </figure>
             </div>
             <button id="button1">Back</button>
